# towerforge

./: .gitignore  AGENTS.md  AUDIO_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  CMakePresets.json  DOCUMENTATION_CONSOLIDATION.md  GAME_DESIGN_DOCUMENT.md  HELP_SYSTEM_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MINIMAP_IMPLEMENTATION_SUMMARY.md  PHASE4_COMPOSITION_PLAN.md  PHASE5_SPEED_CONTROL_REFACTOR.md  PITCH.md  PR_README.md  README.md  TECHNICAL_DESIGN_DOCUMENT.md  TESTING.md  TOWER_POINTS_IMPLEMENTATION.md  UI_DEVELOPMENT_BIBLE.md  UI_REVIEW_FINDINGS.md  WINDOW_FIXES_SUMMARY.md  star_rating_demo.cpp  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
assets/shaders/: ui_batch.frag  ui_batch.vert
docs/: ACCESSIBILITY.md  ACCESSIBILITY_TESTING.md  ADVANCED_FACILITIES.md  ANALYTICS_OVERLAYS.md  AUDIO.md  AUDIO_QUICK_REFERENCE.md  AUDIO_SYSTEM.md  BUILD_INSTRUCTIONS.md  CAMERA_SYSTEM.md  CI_WORKFLOW.md  CLEANLINESS_SYSTEM.md  COMMAND_PATTERN_HISTORY.md  DOCS_INDEX.md  DYNAMIC_FLOOR_SYSTEM.md  ELEVATOR.md  ELEVATOR_IMPLEMENTATION_SUMMARY.md  ELEVATOR_SYSTEM.md  FACILITIES.md  FEATURE_SUMMARY.md  FIXES_QUICKREF.md  GAME_CLASS_ARCHITECTURE.md  GENERAL_SETTINGS_MENU_IMPLEMENTATION.md  GRID_DIMENSION_SYSTEM.md  HELP_SYSTEM.md  HUD.md  HUD_IMPLEMENTATION_SUMMARY.md  HUD_README.md  HUD_SCREENSHOT_REFERENCE.md  HUD_SYSTEM.md  HUD_VISUAL_LAYOUT.md  IMPLEMENTATION.md  IMPLEMENTATION_PLACEMENT.md  IMPLEMENTATION_SUMMARY.md  MINIMAP.md  MODDING_API.md  NOTIFICATION_CENTER.md  NOTIFICATION_CENTER_IMPLEMENTATION_SUMMARY.md  NOTIFICATION_CENTER_VISUAL_REFERENCE.md  PAUSE_MENU_IMPLEMENTATION.md  PERSONS.md  (+26 more)
docs/batch_renderer/: INTEGRATION_GUIDE.md  README.md
docs/deprecated_archive/: ACCESSIBILITY_IMPLEMENTATION.md  ADVANCED_FACILITIES.md  AUDIO_IMPLEMENTATION_SUMMARY.md  AUDIO_QUICK_REFERENCE.md  AUDIO_SYSTEM.md  CI_WORKFLOW.md  DESIGN_DECISION_NO_DEMOS.md  ELEVATOR_IMPLEMENTATION_SUMMARY.md  ELEVATOR_SYSTEM.md  FACILITIES_FULL.md  GENERAL_SETTINGS_MENU_IMPLEMENTATION.md  HUD_IMPLEMENTATION_SUMMARY.md  HUD_README.md  HUD_SCREENSHOT_REFERENCE.md  HUD_SYSTEM.md  HUD_VISUAL_LAYOUT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  PAUSE_MENU_IMPLEMENTATION.md  PERSON_IMPLEMENTATION_SUMMARY.md  PERSON_MOVEMENT_SYSTEM.md  README_SAVE_LOAD.md  SAVE_LOAD_INTEGRATION.md  SAVE_LOAD_SYSTEM.md  TITLE_SCREEN_IMPLEMENTATION.md  TUTORIAL_IMPLEMENTATION.md  mouse_event_system_implementation.md
include/audio/: audio_manager.h
include/core/: accessibility_settings.hpp  achievement_manager.hpp  command.hpp  command_history.hpp  components.hpp  ecs_world.hpp  facility_manager.hpp  game.h  lua_mod_manager.hpp  save_load_manager.hpp  tower_grid.hpp  user_preferences.hpp
include/rendering/: camera.h  renderer.h
include/ui/: accessibility_settings_menu.h  achievements_menu.h  action_bar.h  alert_bar.h  analytics_overlay.h  audio_settings_menu.h  build_menu.h  camera_controls_panel.h  dim_overlay.h  elevator_analytics_overlay.h  engine_confirmation_dialog.h  general_settings_menu.h  grid_panel.h  help_system.h  history_panel.h  hud.h  icon_button.h  income_analytics_overlay.h  info_windows.h  main_menu.h  minimap.h  mods_menu.h  mouse_event_manager.h  mouse_interface.h  notification_center.h  panel_header_overlay.h  pause_menu.h  placement_system.h  population_analytics_overlay.h  research_details_panel.h  research_tree_menu.h  save_load_menu.h  section_header.h  speed_control_panel.h  stat_item.h  tab_bar.h  tooltip.h  tutorial_manager.h  ui_element.h  ui_theme.h  (+3 more)
mods/: example_advanced_research.lua  example_emergency_response_team.lua  example_fire_event.lua  example_gaming_lounge.lua  example_hotel_research.lua  example_hvac_technician.lua  example_night_janitor.lua  example_pest_infestation.lua  example_tourist_visitor.lua
screenshots/: minimap_visual_reference.txt
scripts/: verify_build.sh
src/: achievements_screenshot.cpp  camera_screenshot.cpp  click_test_app.cpp  credits_screen_screenshot.cpp  demo_screenshot.cpp  elevator_demo_app.cpp  hud_demo.cpp  main.cpp  main_menu_screenshot.cpp  menu_screenshot.cpp  notification_screenshot.cpp  pause_menu_screenshot.cpp  placement_demo_app.cpp  research_tree_demo.cpp  screenshot_app.cpp  test_adjacency.cpp  test_facilities.cpp  test_maintenance.cpp  test_mods.cpp  test_save_load.cpp  test_user_preferences.cpp  title_screen_screenshot.cpp  tooltip_demo.cpp  ui_windows_screenshot.cpp
src/audio/: audio_manager.cpp
src/core/: CMakeLists.txt  accessibility_settings.cpp  achievement_manager.cpp  command.cpp  command_history.cpp  ecs_world.cpp  facility_manager.cpp  game.cpp  grid_demo.cpp  lua_mod_manager.cpp  save_load_manager.cpp  tower_grid.cpp  tower_grid_test.cpp  user_preferences.cpp
src/core/scenes/: achievements_scene.cpp  credits_scene.cpp  ingame_scene.cpp  settings_scene.cpp  title_scene.cpp  tutorial_scene.cpp
src/core/systems/: economy_systems.cpp  facility_systems.cpp  movement_systems.cpp  person_elevator_systems.cpp  staff_systems.cpp  time_systems.cpp  visitor_employee_systems.cpp
src/rendering/: camera.cpp  renderer.cpp
src/ui/: accessibility_settings_menu.cpp  achievements_menu.cpp  action_bar.cpp  alert_bar.cpp  analytics_overlay.cpp  audio_settings_menu.cpp  build_menu.cpp  camera_controls_panel.cpp  dim_overlay.cpp  elevator_analytics_overlay.cpp  engine_confirmation_dialog.cpp  general_settings_menu.cpp  grid_panel.cpp  help_system.cpp  history_panel.cpp  hud.cpp  icon_button.cpp  income_analytics_overlay.cpp  info_windows.cpp  main_menu.cpp  minimap.cpp  mods_menu.cpp  tab_bar.cpp  (+18 more)
tests/: CMakeLists.txt
tests/e2e/: test_facility_placement_workflow_e2e.cpp  test_game_initialization_e2e.cpp  test_save_load_workflow_e2e.cpp
tests/integration/: test_achievement_manager_integration.cpp  test_ecs_world_integration.cpp  test_facility_manager_integration.cpp  test_lua_mod_manager_integration.cpp  test_save_load_integration.cpp  test_tower_grid_integration.cpp
tests/unit/: test_accessibility_settings_unit.cpp  test_command_history_unit.cpp  test_user_preferences_unit.cpp
(+26 files in other folders)
